Opened 5 years ago

Closed 5 years ago

#16044 closed bug (fixed)

R1B2: No battery status for System76 Oryx Pro

Reported by: rjzak Owned by: nobody
Priority: high Milestone: R1/beta2
Component: System/Kernel Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev54010 shows the battery status indicator, along with stats about the battery, including capacity, voltage, and state (charged, charging, discharging). R1B2 doesn't show any battery status.

I'm not sure where to look to find out more information about this. This ticket was created as instructed.

Attachments (2)

syslog_hrev54154_31 (249.0 KB ) - added by rjzak 5 years ago.
syslog_hrev54010 (910.5 KB ) - added by rjzak 5 years ago.

Download all attachments as: .zip

Change History (11)

comment:1 by waddlesplash, 5 years ago

Component: - GeneralDrivers/Power
Platform: x86-64All

Please attach a syslog from both hrev54010 and beta2 builds.

comment:2 by waddlesplash, 5 years ago

Can you please attach it uncompressed?

by rjzak, 5 years ago

Attachment: syslog_hrev54154_31 added

by rjzak, 5 years ago

Attachment: syslog_hrev54010 added

comment:3 by waddlesplash, 5 years ago

KERN: publish device: node 0xffffffffd78795a8, path power/acpi_battery/0, module drivers/power/acpi_battery/device_v1

I see these lines in both syslogs. Are these "mixed" (i.e. the same partition?) If so, can you check if the accompanying /dev entry is not present under one or the other?

More interestingly, this is at the bottom of the master syslog, but not the beta2 one:

KERN: Firmware Error (ACPI): Could not resolve [^^PR00._PSS], AE_NOT_FOUNDKERN:  (20181213/psargs-503)
KERN: ACPI Error: KERN: Method parse/execution failed KERN: \_SB.AC.ADJPKERN: , AE_NOT_FOUNDKERN:  (20181213/psparse-689)
KERN: ACPI Error: Method parse/execution failed KERN: \_SB.PCI0.LPCB.EC._Q16KERN: , AE_NOT_FOUNDKERN:  (20181213/psparse-689)

comment:4 by waddlesplash, 5 years ago

Cc: tqh added

comment:5 by rjzak, 5 years ago

/dev/power/acpi_battery/0 is present under hrev54010 and beta2 hrev54154+31. I'm not sure what you mean by mixed or same partition. hrev54010 runs off a SATA SSD, beta2 I'm running off of a USB3 thumb drive (laptop doesn't have an optical disc drive and I don't have a USB optical disc drive)

comment:6 by rjzak, 5 years ago

Also, Beta2 hangs on the "Shutting Down..." status message.

comment:7 by waddlesplash, 5 years ago

Cc: tqh removed
Component: Drivers/PowerDrivers/ACPI
Milestone: UnscheduledR1/beta2
Owner: changed from nobody to tqh
Priority: normalhigh

This sounds like a serious problem between KDEBUG and non-KDEBUG kernels, then. Elevating.

comment:8 by waddlesplash, 5 years ago

There was a race condition in mutex_lock_with_timeout that may have been the cause of this; hrev54214 fixes that.

comment:9 by waddlesplash, 5 years ago

Component: Drivers/ACPISystem/Kernel
Owner: changed from tqh to nobody
Resolution: fixed
Status: newclosed
<rjzak> waddlesplash: the latest code from r1beta2 is working on my laptop when booted from the USB drive, I can see the battery info, and it doesn't freeze when trying to shutdown

So it seems the race was indeed the problem!

Note: See TracTickets for help on using tickets.